@@ -5,6 +5,11 @@
 * Slop#respond_to_missing? を実装 (#1176)
 
 
+==== バグ修正
+
+* Capture non-parse errors from Document#dup in Document#errors. (#1196)
+
+
 === 1.6.4.1 / 2014年11月5日
 
 ==== バグ修正
