@@ -320,18 +320,26 @@ static VALUE read_memory( VALUE klass,
 static VALUE duplicate_document(int argc, VALUE *argv, VALUE self)
 {
   xmlDocPtr doc, dup;
+  VALUE copy;
   VALUE level;
+  VALUE error_list      = rb_ary_new();
 
   if(rb_scan_args(argc, argv, "01", &level) == 0)
     level = INT2NUM((long)1);
 
   Data_Get_Struct(self, xmlDoc, doc);
 
+  xmlResetLastError();
+  xmlSetStructuredErrorFunc((void *)error_list, Nokogiri_error_array_pusher);
   dup = xmlCopyDoc(doc, (int)NUM2INT(level));
+  xmlSetStructuredErrorFunc(NULL, NULL);
+
   if(dup == NULL) return Qnil;
 
   dup->type = doc->type;
-  return Nokogiri_wrap_xml_document(rb_obj_class(self), dup);
+  copy = Nokogiri_wrap_xml_document(rb_obj_class(self), dup);
+  rb_iv_set(copy, "@errors", error_list);
+  return copy ;
 }
 
 /*
